# mi_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  catastrophe_impact_on_mi.md  chat.py  essent_test.md  gse_relationship.md  mi_regulatory_landscape.md  pmiers_aug_2024_update.md  pyproject.toml  run_app.py  us_mortgage_market.md
data.mi/: wiki_lint_report.md  wiki_triage_log.md
data.mi/parsed/: ACGL_10-Q_2023-03-31.md  ACGL_10-Q_2023-06-30.md  ACGL_10-Q_2023-09-30.md  ACGL_10-Q_2024-03-31.md  ACGL_8-K_2023-04-26.md  ACGL_8-K_2023-07-26.md  ACGL_8-K_2023-10-30.md  ACGL_8-K_2024-02-14.md  ACGL_8-K_2024-04-29.md  ACGL_8-K_2024-07-30.md  ACGL_8-K_2024-10-30.md  ACGL_8-K_2025-02-10.md  ACGL_8-K_2025-04-29.md  ACGL_8-K_2025-07-29.md  ACGL_8-K_2025-10-27.md  ACGL_8-K_2026-02-09.md  ACGL_TRANSCRIPT_2023-03-31.md  ACGL_TRANSCRIPT_2023-06-30.md  ACGL_TRANSCRIPT_2023-09-30.md  ACGL_TRANSCRIPT_2023-12-31.md  ACGL_TRANSCRIPT_2024-03-31.md  ACGL_TRANSCRIPT_2024-06-30.md  ACGL_TRANSCRIPT_2024-09-30.md  ACGL_TRANSCRIPT_2024-12-31.md  ACGL_TRANSCRIPT_2025-03-31.md  ACGL_TRANSCRIPT_2025-06-30.md  ACGL_TRANSCRIPT_2025-09-30.md  ACGL_TRANSCRIPT_2025-12-31.md  ACT_10-Q_2023-03-31.md  ACT_10-Q_2024-06-30.md  ACT_8-K_2023-05-03.md  ACT_8-K_2023-08-01.md  ACT_8-K_2023-11-01.md  ACT_8-K_2024-02-06.md  ACT_8-K_2024-05-01.md  ACT_8-K_2024-07-31.md  ACT_8-K_2024-11-06.md  ACT_8-K_2025-02-04.md  ACT_8-K_2025-04-30.md  ACT_8-K_2025-07-30.md  (+134 more)
data.mi/wiki/: AGENTS.md  index.md  log.md
data/parsed/: ACGL_10-K_2023-12-31.md  ACGL_10-K_2024-12-31.md  ACGL_10-Q_2024-06-30.md  ACT_10-K_2023-12-31.md  ACT_10-Q_2023-06-30.md  ACT_10-Q_2023-09-30.md  ACT_10-Q_2024-03-31.md  ESNT_10-Q_2023-03-31.md  ESNT_10-Q_2023-06-30.md  ESNT_10-Q_2023-09-30.md  ESNT_10-Q_2024-09-30.md  MTG_10-Q_2023-03-31.md  NMIH_10-K_2023-12-31.md  NMIH_10-K_2024-12-31.md  NMIH_10-Q_2023-03-31.md  NMIH_10-Q_2023-06-30.md  NMIH_10-Q_2023-09-30.md  RDN_10-K_2024-12-31.md  RDN_10-Q_2023-03-31.md  RDN_10-Q_2023-06-30.md  RDN_10-Q_2023-09-30.md  (+1 more)
eval/: README.md  questions_mi.csv  questions_mi_23q.csv  questions_mi_q18_only.csv  questions_mi_q19_only.csv  run_eval.py
pipelines/: bedrock_embedding.py  build_kb.py  build_wiki.py  fetchers.py  lint_wiki.py  parse_transcripts.py  triage_lint_findings.py
scripts/: probe_q13_q14.py  run_alpha_sweep.py  run_sweep.py  simulate_agent.py  switch_kb.sh
src/: config.py
wiki/: AGENTS.md
(+74 files in other folders)
