[project]
name = "agent-fin"
version = "0.1.0"
description = "Deploy-ready SEC filings RAG agent: LangGraph ReAct + dsRAG (single-tool retrieval) + DeepSeek/Bedrock orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.2.0",
    "boto3>=1.42.0",
    "dsrag[chroma]>=0.5.6",
    "instructor>=1.6.0",
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-aws>=1.0.4",
    "loguru>=0.7.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
