[project]
name = "agent-fin"
version = "0.1.0"
description = "Deploy-ready SEC filings RAG agent: LangGraph ReAct + dsRAG (single-tool retrieval) + DeepSeek/Bedrock orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.2.0",
    "boto3>=1.42.0",
    "chainlit>=1.3.0",
    # Note: NOT [chroma]. The KB uses BasicVectorDB / BasicChunkDB
    # (file-pickle-backed), and chromadb's transitives (rust bindings,
    # onnxruntime, kubernetes client, etc.) add ~250MB without being used.
    "dsrag>=0.5.6",
    "fastapi>=0.115.0",
    # dsRAG hard-imports google.generativeai at module load (in dsrag.llm)
    # even when no Gemini-backed component is configured. Required.
    "google-generativeai>=0.8.6",
    "instructor>=1.6.0",
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-aws>=1.0.4",
    "loguru>=0.7.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
# Build-time only: needed when (re)fetching from EDGAR or rebuilding the KB.
# Not in the runtime image — install via `uv sync --extra pipelines`.
pipelines = [
    "sec-edgar-downloader>=5.0.0",
    "docling>=2.0.0",
]

# Optional FlashRank cross-encoder reranker (lost the alpha sweep on FB,
# but reproducible/usable via RERANKER=flashrank env var). Pulls in
# onnxruntime (~55 MB), kept out of the default runtime image.
reranker = [
    "flashrank>=0.2.10",
]

[dependency-groups]
dev = [
    "selenium>=4.43.0",
]
